# crstop

./: Cargo.toml  README.md
src/: app.rs  cache.rs  client.rs  config.rs  format.rs  history.rs  lib.rs  main.rs  model.rs  ui.rs
tests/: cli_tests.rs  config_tests.rs  history_tests.rs  model_tests.rs  once_tests.rs  readme_tests.rs  ui_trend_tests.rs
tests/fixtures/: sample_snapshot.json
